@@ -530,7 +530,7 @@ void edgex_device_post_readings
   edgex_device_service *svc,
   const char *devname,
   const char *resname,
-  const edgex_device_commandresult *values
+  edgex_device_commandresult *values
 )
 {
   edgex_device *dev = edgex_devmap_device_byname (svc->devices, devname);
